--- a/arch/arm64/configs/l5460_defconfig
+++ b/arch/arm64/configs/l5460_defconfig
@@ -216,7 +216,7 @@ CONFIG_CUSTOM_KERNEL_ALSPS=y
 CONFIG_MTK_LTR553=y
 CONFIG_MTK_COMBO_AOSP_TETHERING_SUPPORT=y
 CONFIG_MTK_MPU6050G_NEW=y
-#CONFIG_CUSTOM_KERNEL_GYROSCOPE=y
+CONFIG_CUSTOM_KERNEL_GYROSCOPE=y
 #CONFIG_MTK_ITG1010_NEW=y
 CONFIG_MTK_MPU6050GY_NEW=y
 CONFIG_MTK_KXTJ2_1009_NEW=y
